--- a/Client/index.css
+++ b/Client/index.css
@@ -98,6 +98,10 @@ button {
   margin: 0 auto;
   padding: 0 var(--spacing-md);
 }
+.plot {
+  width: 800px;
+  height: 200px;
+}
 .container-main {
   width: 100%;
   max-width: 1400px;
@@ -107,6 +111,9 @@ button {
 }
 .mt-6 {
   margin-top: 2rem; /* Adjust as needed */
+}
+.speed-slider {
+  width: "8rem";
 }
 
 .flex {
@@ -671,10 +678,12 @@ button {
   border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
   overflow: hidden;
+  height: 200px; /* fixed height */
 }
 
 .signal-viewer-canvas {
   width: 100%;
+  height: 100%;
   display: block;
 }
 
