--- a/Client/index.css
+++ b/Client/index.css
@@ -94,17 +94,22 @@ button {
 
 .container {
   width: 100%;
-  max-width: 1400px;
   margin: 0 auto;
-  padding: 0 var(--spacing-md);
+  padding: 0 var(--spacing-lg);
 }
 .plot {
   width: 800px;
   height: 200px;
 }
-.container-main {
+.upload {
   width: 100%;
   max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 var(--spacing-md);
+  padding: "2rem 1rem";
+}
+.container-main {
+  width: 100%;
   margin: 0 auto;
   padding: 0 var(--spacing-md);
   padding: "2rem 1rem";
@@ -608,6 +613,15 @@ button {
 }
 
 /* Equalizer Panel */
+
+#control-panel {
+  width: 500px;
+  min-width: 450px;
+  margin-left: auto;
+  margin-right: var(--spacing-lg);
+  margin-top: var(--spacing-lg);
+}
+
 .equalizer-panel {
   padding: var(--spacing-lg);
 }
@@ -834,11 +848,24 @@ button {
 .spectrogram-viewer {
   padding: var(--spacing-md);
 }
-#time-domain {
-  margin-bottom: var(--spacing-lg);
+.graphs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-#frequency-domain {
-  margin-top: var(--spacing-lg);
+
+#time-domain,
+#frequency-domain,
+#Spectrograms {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px; /* equal spacing */
+  align-items: stretch;
+}
+@media (min-width: 1024px) {
+  #mainApp {
+    grid-template-columns: 1fr 1fr 500px !important;
+  }
 }
 
 .fft-title {
